# snakepit_tc_ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  README.md  create_role.sh  deploy_repo_to_mlchead.sh  fetch_tc_binaries.sh  inventory.ini  pyproject.toml  requirements.txt  snakepit_tc_workers.yml
.github/workflows/: ci_test.yml
group_vars/: workers_2080ti.yml  workers_quadro6k.yml  workers_titanxp.yml
roles/taskcluster_worker/: README.md
roles/taskcluster_worker/defaults/: main.yml
roles/taskcluster_worker/files/: .gitignore
roles/taskcluster_worker/tasks/: main.yml
roles/taskcluster_worker/templates/: start-worker-config.j2  start-worker-config.j2.orig  start-worker.service.j2
