[tool.poetry]
name = "snakepit-tc-ansible"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
# max we can run on mlchead with it's old python3.6
# ansible = "^4.10"
ansible = "*"

[tool.poetry.group.dev.dependencies]
detect-secrets = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
